# CS003A

./: CMakeLists.txt  Dynamic_2D_Array.cpp  Palindrome.cpp  main.cpp
Assignments/Bouncing_Ball/: bb_functions.cpp  bb_functions.h  bb_main.cpp  bouncingBall.cpp  bouncingBall.h  paddle.cpp  paddle.h
Assignments/LinkedList/: List.cpp  List.h  Node.cpp  linkedlist_main.cpp
Assignments/Lists/LinkedList/: List.cpp  List.h  Node.h
Assignments/Lists/Stacks/: Stack.cpp  Stack.h  stackTester.cpp
Assignments/Poker_Analysis/: poker_Main.cpp
Assignments/Poker_Analysis/display/: DisplayWindow.cpp  DisplayWindow.h  PokerAnalysisDisplay.cpp  PokerAnalysisDisplay.h
Assignments/Poker_Analysis/display/drawables/: DrawableCard.cpp  DrawableCard.h  DrawablePokerHand.h
Assignments/Poker_Analysis/display/helpers/: PokerHands.h
Assignments/RPN/: RPN.cpp  RPN.h  rpn_main.cpp
Assignments/_Textbook_Problems/Chapter_10/: Ch10_self_test_excersizes.txt
Assignments/_Textbook_Problems/Chapter_10/PracticeProgram_1/: CDAccount.cpp  CDAccount.h  PP1_main.cpp
Assignments/_Textbook_Problems/Chapter_10/PracticeProgram_2/: CDAccount.cpp  CDAccount.h  PP2_main.cpp
Assignments/_Textbook_Problems/Chapter_10/PracticeProgram_3/: CounterType.cpp  CounterType.h  PP3_main.cpp
Assignments/_Textbook_Problems/Chapter_10/ProgrammingProject_10/: POSTNET.cpp  POSTNET.h  PP10_main.cpp
Assignments/_Textbook_Problems/Chapter_10/ProgrammingProject_11/: PP11_main.cpp  movie.cpp  movie.h
Assignments/_Textbook_Problems/Chapter_10/ProgrammingProject_4/: CH10_PP4_main.cpp  month.cpp  month.h
Assignments/_Textbook_Problems/Chapter_11/PracticeProgram_1/: PP1_main.cpp  money.cpp  money.h
Assignments/_Textbook_Problems/Chapter_11/PracticeProgram_2/: PP2_main.cpp  pairs.cpp  pairs.h
Assignments/_Textbook_Problems/Chapter_11/PracticeProgram_3/: PP3_main.cpp  degreeAngle.cpp  degreeAngle.h  test.cpp  test.h
Assignments/_Textbook_Problems/Chapter_11/ProgrammingProject_1/: PP1_main.cpp  VectorDouble.cpp  VectorDouble.h
Assignments/_Textbook_Problems/Chapter_11/ProgrammingProject_3/: Complex.cpp  Complex.h  PP3_main.cpp
Assignments/_Textbook_Problems/Chapter_11/ProgrammingProject_5/: PP5_main.cpp  StringVar.cpp  StringVar.h
Assignments/_Textbook_Problems/Chapter_14/: Ch14_self_test_excersizes.txt
Assignments/_Textbook_Problems/Chapter_9/: Ch9_self_test_exercises.txt
Assignments/_Textbook_Problems/Chapter_9/PracticeProblem_3/: PracticeProgram_3.cpp
Assignments/_Textbook_Problems/Chapter_9/PracticeProgram_1/: PracticeProgram_1.cpp
Assignments/_Textbook_Problems/Chapter_9/PracticeProgram_2/: PracticeProgram_2.cpp
Assignments/_Textbook_Problems/Chapter_9/ProgrammingProject_4/: PP4_functions.cpp  PP4_functions.h  PP4_main.cpp
Assignments/_Textbook_Problems/Chapter_9/ProgrammingProject_5/: PP5_functions.cpp  PP5_functions.h  PP5_main.cpp
Assignments/playingCard/: Card.cpp  Card.h  RankEnum.h  SuitEnum.h  card_main.cpp  topHatGuy.cpp  topHatGuy.h  tophatguy_main.cpp
FinalProject/: CMakeLists.txt  main.cpp
FinalProject/Apps/AppDriver/: AppDetail.cpp  AppDetail.h  AppDriver.cpp  AppDriver.h
FinalProject/Apps/BouncingObject/: App_BouncingObject.h  BouncingObject.h
FinalProject/Apps/CardApps/Drawables/: DrawableCard.h
FinalProject/Apps/CardApps/PlayingCard/: App_PlayingCard.h  PlayingCard.h
FinalProject/Apps/CardApps/PokerAnalysisDisplay/: App_PokerAnalysis.h  PokerAnalysisDisplay.h
FinalProject/Apps/GameSelector/: AppPreview.cpp  AppPreview.h  App_GameSelector.cpp  App_GameSelector.h  DetailedAppPreview.cpp  DetailedAppPreview.h  GameSelector.cpp  GameSelector.h  Play.h
FinalProject/Apps/GreenBall/: App_GreenBall.h  GreenBall.h
FinalProject/Apps/OceanCleanup/: OceanCleanup.cpp  OceanCleanup.h  Score.cpp  Score.h  Vessel.cpp  Vessel.h
FinalProject/Apps/OceanCleanup/Trash/: Trash.cpp  TrashGenerator.cpp  TrashGenerator.h
FinalProject/Apps/OceanCleanup/future/: base.cpp  base.h
FinalProject/Apps/Pong/: App_Pong.cpp  App_Pong.h  PingPongBall.cpp  Pong.cpp  Pong.h
FinalProject/Apps/TopHatGuy/: App_TopHatGuy.h  topHatGuyComponent.h
FinalProject/Console/: GameConsole.cpp  GameConsoleFunctions.cpp  GameConsoleFunctions.h
FinalProject/Resources/: Fonts.cpp  Textures.cpp  Textures.h
FinalProject/Resources/Application/: DisplayableApplication.h
FinalProject/Resources/ButtonComponent/: AppSwitchButton.cpp  AppSwitchButton.h
FinalProject/Resources/Buttons/: ButtonBase.cpp  ButtonBase.h  HomeButton.h
FinalProject/Resources/ScrollableContainer/: ScrollableContainer.h
FinalProject/Resources/Tools/: Fonts.cpp  Fonts.h  Textures.cpp
FinalProject/Resources/enums/: FontsEnum.h  TexturesEnum.h
FinalProject/SFMLGame/: DisplayableApplication.cpp  DisplayableApplication.h  MouseEvents.cpp  Position.cpp  SpriteImage.cpp  SpriteImage.h
FinalProject/SFMLGame/ButtonComponent/: AppSwitchButton.h
FinalProject/SFMLGame/Buttons/: AppPreview.cpp  AppPreview.h  ButtonBase.h  DetailedAppPreview.cpp  HomeButton.cpp  Play.cpp
SFMLHelpers/: CMakeLists.txt  Circle.cpp  Circle.h  Fonts.cpp  Fonts.h  FontsEnum.h  Position.cpp  Position.h  States.cpp  States.h  Textures.cpp  Textures.h  TexturesEnum.h  clock.cpp  fallingobj.cpp  main.cpp  scrollobject.cpp  statesEnum.h
SFMLHelpers/sfmlApplication/: Application.cpp  Application.h  EventHandleable.cpp  Project.cpp  Square.h  Updatable.cpp
class_example/: car.cpp  car.h  carLot.cpp  carLot.h  class_main.cpp
cs003a_worksheets/: Pointers_Worksheet.docx  Vectors_-_Worksheet.docx
review/: reviewFunction.cpp  reviewFunction.h  reviewMain.cpp  reviewPartialArray.cpp  sfmlsetup.cpp
review/match/: match_functions.cpp  match_functions.h  match_main.cpp
sfmlApplication/: Application.h  Component.cpp  Component.h  EventHandleable.h  Project.h  Square.cpp  Updatable.h  app_main.cpp
sfml_template/: sfml_template.cpp
struct_example/: coordinates.h  names.h  struct_functions.cpp  struct_functions.h  struct_main.cpp
template_example/: CMakeLists.txt  bootlegVector.cpp  bootlegVector.h  bootlegVector_main.cpp
(+3 files in other folders)
